src/components/utility/Grid/Grid.module.scss
/* ==========================================================================
   #GRID
   ========================================================================== */

@import "../../../styles/settings/settings.global";
@import "../../../styles/tools/tools.functions";
@import "../../../styles/tools/tools.mixins";

// Ensure these settings are configured before the @import of this file.
$grid-column-number: 12 !default;
$grid-column-gap: 80px !default;

.grid {
  margin-left: -(rem-calc($grid-column-gap));
  @include gridWithFallback;

  .gridItem {
    padding-left: rem-calc($grid-column-gap);
  }
}

/* Style variants
   ========================================================================== */
@for $i from 2 through $grid-column-number {
  .grid--#{$i} {

    .gridItem {
      flex-basis: 100% / $i;
    }

    @supports (display: grid) {
      grid-template-columns: repeat($i, 1fr);
    }

  }
}

.grid--\@small {
  display: block;

  @include phablet {
    @include gridWithFallback;
  }
}

.grid--\@medium {
  display: block;

  @include tablet {
    @include gridWithFallback;
  }
}

.grid--\@large {
  display: block;

  @include desktop {
    @include gridWithFallback;
  }
}

